--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["oliver <oliverswarne@gmail.com>"]
 
 [dependencies]
-ring = "0.10.0"
+ring    = "0.10.0"
 text_io = "0.1.6"
+diesel = { version = "0.16.0", features = ["sqlite"] }
+diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
+dotenv = "0.9.0"
