--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ text_io = "0.1.6"
 diesel = { version = "0.16.0", features = ["sqlite"] }
 diesel_codegen = { version = "0.16.0", features = ["sqlite"] }
 dotenv = "0.9.0"
+rand = "0.3"
